@@ -2287,11 +2287,6 @@ argument_list|,
 literal|"getApplicationID"
 argument_list|)
 expr_stmt|;
-name|dispatcher
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -2533,11 +2528,6 @@ argument_list|,
 literal|"getApplicationID"
 argument_list|)
 expr_stmt|;
-name|dispatcher
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
 name|logAggregationService
 operator|.
 name|close
@@ -2608,36 +2598,6 @@ block|,
 literal|"syslog"
 block|}
 decl_stmt|;
-name|DrainDispatcher
-name|dispatcher
-init|=
-name|createDispatcher
-argument_list|()
-decl_stmt|;
-name|EventHandler
-argument_list|<
-name|ApplicationEvent
-argument_list|>
-name|appEventHandler
-init|=
-name|mock
-argument_list|(
-name|EventHandler
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|dispatcher
-operator|.
-name|register
-argument_list|(
-name|ApplicationEventType
-operator|.
-name|class
-argument_list|,
-name|appEventHandler
-argument_list|)
-expr_stmt|;
 name|LogAggregationService
 name|logAggregationService
 init|=
@@ -3355,11 +3315,6 @@ argument_list|,
 literal|"getApplicationID"
 argument_list|)
 expr_stmt|;
-name|dispatcher
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -3759,12 +3714,6 @@ name|getAbsolutePath
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|DrainDispatcher
-name|dispatcher
-init|=
-name|createDispatcher
-argument_list|()
-decl_stmt|;
 name|LogAggregationService
 name|logAggregationService
 init|=
@@ -4323,6 +4272,11 @@ expr_stmt|;
 name|aggSvc
 operator|.
 name|close
+argument_list|()
+expr_stmt|;
+name|dispatcher
+operator|.
+name|stop
 argument_list|()
 expr_stmt|;
 block|}
@@ -7704,36 +7658,6 @@ name|getAbsolutePath
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|DrainDispatcher
-name|dispatcher
-init|=
-name|createDispatcher
-argument_list|()
-decl_stmt|;
-name|EventHandler
-argument_list|<
-name|ApplicationEvent
-argument_list|>
-name|appEventHandler
-init|=
-name|mock
-argument_list|(
-name|EventHandler
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|dispatcher
-operator|.
-name|register
-argument_list|(
-name|ApplicationEventType
-operator|.
-name|class
-argument_list|,
-name|appEventHandler
-argument_list|)
-expr_stmt|;
 name|ApplicationId
 name|application1
 init|=
@@ -8718,11 +8642,6 @@ argument_list|,
 literal|"getApplicationID"
 argument_list|)
 expr_stmt|;
-name|dispatcher
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -8879,36 +8798,6 @@ operator|.
 name|DEBUG_NM_DELETE_DELAY_SEC
 argument_list|,
 literal|3600
-argument_list|)
-expr_stmt|;
-name|DrainDispatcher
-name|dispatcher
-init|=
-name|createDispatcher
-argument_list|()
-decl_stmt|;
-name|EventHandler
-argument_list|<
-name|ApplicationEvent
-argument_list|>
-name|appEventHandler
-init|=
-name|mock
-argument_list|(
-name|EventHandler
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|dispatcher
-operator|.
-name|register
-argument_list|(
-name|ApplicationEventType
-operator|.
-name|class
-argument_list|,
-name|appEventHandler
 argument_list|)
 expr_stmt|;
 name|ApplicationId
@@ -9543,11 +9432,6 @@ name|getNumAggregators
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|dispatcher
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -9587,23 +9471,6 @@ operator|.
 name|setConfiguration
 argument_list|(
 name|conf
-argument_list|)
-expr_stmt|;
-name|DrainDispatcher
-name|dispatcher
-init|=
-name|createDispatcher
-argument_list|()
-decl_stmt|;
-name|dispatcher
-operator|.
-name|register
-argument_list|(
-name|ApplicationEventType
-operator|.
-name|class
-argument_list|,
-name|appEventHandler
 argument_list|)
 expr_stmt|;
 name|ApplicationId
@@ -9927,11 +9794,6 @@ literal|20000
 argument_list|)
 expr_stmt|;
 name|logAggregationService
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
-name|dispatcher
 operator|.
 name|stop
 argument_list|()
